<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="com.ashiswin.kodyac.BasicInformationVerificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorError"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/txtErrorMsg"
        android:text=" "
        android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorIBMBlue"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/myinfo_instruction"
        android:text="Please click to scan NRIC barcode to generate the following information" />

    <Button
        android:id="@+id/scan_bttn"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/addbarcode"
        android:textColor="@color/colorPrimary"
        android:gravity="top"
        android:elevation="10dp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="66dp"
        android:layout_gravity="center_horizontal"
        android:foreground="?android:attr/selectableItemBackground" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorTextLight"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="(Name)" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">


        <TextView
            android:id="@+id/barcode_num"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorTextLight"
            android:layout_marginLeft="16dp"
            android:text="(IC Number)"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/nricicon"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">


        <TextView
            android:id="@+id/txtRace"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLight"
            android:textAlignment="textStart"
            android:layout_marginLeft="16dp"
            android:text="(Race)"
            android:textAppearance="?android:textAppearanceMedium"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/raceicon"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txtSex"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextLight"
            android:layout_marginLeft="16dp"
            android:text="(Gender)"
            android:textAppearance="?android:textAppearanceMedium"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/sexicon"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txtDOB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorTextLight"
            android:layout_marginLeft="16dp"
            android:text="(Date of Birth)"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/dobicon"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txtCountryBirth"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="(Nationality)"
            android:textColor="@color/colorTextLight"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="16dp"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/nationalityicon"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="(Address)"
            android:textColor="@color/colorTextLight"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="16dp"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/addressicon"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btncompleteselect"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground" />
</LinearLayout>
