<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="com.ashiswin.kodyac.SMSVerificationNumberActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sms_instruction"
        android:layout_margin="16dp"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="center_horizontal"
        android:textColor="@color/colorIBMBlue"
        android:text="Please enter your phone number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnCountryCode"
            android:backgroundTint="@color/colorTextLight"
            android:textAppearance="?android:textAppearanceLarge" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/colorTextLight"
            android:backgroundTint="@color/colorTextLight"
            android:textCursorDrawable="@color/colorTextLight"
            android:textAppearance="?android:textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:id="@+id/btnSendSMS"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="Send SMS"
        android:background="@drawable/btn_border"
        android:elevation="0dp"
        android:enabled="false"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
