...
    android:layout_gravity="center_horizontal"
    tools:context="com.ashiswin.kodyac.VideoVerificationNRICActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nric_video_instructions"
        android:text="Please click to add photo ID and \nperform video verification"
        android:textColor="@color/colorIBMBlue"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
...
                android:layout_marginRight="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="0dp"
                android:background="@drawable/addicon"/>

            <Button
                android:id="@+id/btnVideoVerification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:enabled="true"
                android:elevation="0dp"
...
